--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
     </table>
     {% endif %}
 
-    <div class="form">
+    <div class="form-group">
         <form action="/" method="POST">
             <input type="text" name="content" id="content">
             <input type="submit" value="Add Task">
